Fixed right-aligned dropdown arrow

--- a/src/styles/bank_transactions.scss
+++ b/src/styles/bank_transactions.scss
@@ -483,8 +483,8 @@
 }
 
 .Layer__bank-transaction-row__expand-button {
-  width: 36px;
-  min-width: 36px;
+  width: fit-content;
+  vertical-align: middle;
 }
 
 .Layer__bank-transaction-row__actions-cell--open {
